[gd_scene load_steps=6 format=2]

[ext_resource path="res://Script/Menu.gd" type="Script" id=1]
[ext_resource path="res://Scenes/MainMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/SettingMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://art/UI/Buttons/background.jpg" type="Texture" id=4]
[ext_resource path="res://art/帮助.png" type="Texture" id=5]

[node name="Menu" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="MainMenu" parent="." instance=ExtResource( 2 )]

[node name="SettingMenu" parent="." instance=ExtResource( 3 )]

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 576, 1024 )
texture = ExtResource( 4 )
expand = true

[node name="PopupMenu" type="PopupMenu" parent="."]
margin_right = 20.0
margin_bottom = 20.0

[node name="Sprite" type="Sprite" parent="PopupMenu"]
position = Vector2( 284.415, 494.718 )
scale = Vector2( 0.2, 0.3 )
texture = ExtResource( 5 )
[connection signal="read_sound" from="." to="SettingMenu" method="_on_Menu_read_sound"]
[connection signal="help" from="MainMenu" to="." method="_on_MainMenu_help"]
[connection signal="play_pressed" from="MainMenu" to="." method="_on_MainMenu_play_pressed"]
[connection signal="settings_pressed" from="MainMenu" to="." method="_on_MainMenu_settings_pressed"]
[connection signal="back_button" from="SettingMenu" to="." method="_on_SettingMenu_back_button"]
[connection signal="sound_change" from="SettingMenu" to="." method="_on_SettingMenu_sound_change"]
[connection signal="theme_change" from="SettingMenu" to="." method="_on_SettingMenu_theme_change"]
[connection signal="popup_hide" from="PopupMenu" to="." method="_on_PopupMenu_popup_hide"]
